fixed "Make A Statement" to right align in nav bar

--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,11 @@ header, #wrapper, footer {
     background-color: #f68b1f;
 }
 
+#statement{
+    position: relative;
+    float: right;
+}
+
 footer {
     background-color: #f05b87;
     height: 150px;
